--- a/omega/components/omega_side/side/omega_python_plugins/OmgSide插件-网页管理系统HTML/recording.html
+++ b/omega/components/omega_side/side/omega_python_plugins/OmgSide插件-网页管理系统HTML/recording.html
@@ -29,20 +29,6 @@
                 window.location.href = './login';
             }
         }
-        function commandstart(){
-            var command = document.getElementById('command').value;
-            var tk = document.getElementById('dataid').getAttribute('d');
-            var httpRequest = new XMLHttpRequest();
-            httpRequest.open('GET', 'http://127.0.0.1:5000/omega/api/commandstart/'+command+"/"+tk, true);
-            httpRequest.send();
-            httpRequest.onreadystatechange = function () {
-            if (httpRequest.readyState == 4 && httpRequest.status == 200) {
-                var json = httpRequest.responseText;
-                console.log(json);
-                alert("已执行,返回:"+json)
-        }
-    }
-}
     </script>
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid"> 
@@ -58,9 +44,9 @@
     </div>
     <div class="collapse navbar-collapse" id="example-navbar-collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="command">远程执行</a></li>
+            <li><a href="command">远程执行</a></li>
             <li><a href="playerlist">玩家列表</a></li>
-            <li><a href="recording">进服记录</a></li>
+            <li class="active"><a href="recording">进服记录</a></li>
             <li><a href="msg">服内消息</a></li>
             <li><a href="exit">退出登录</a></li>
             </li>
@@ -75,23 +61,18 @@
 </div>
 
 
-<div class="panel panel-success">
-    <div class="panel-heading">
-        <h3 class="panel-title">指令执行</h3>
-    </div>
-    <div class="input-group">
-        <span class="input-group-addon input-lg">指令</span>
-        <input type="text" name="hm" maxlength="1024" id="command" class="form-control input-lg" placeholder="指令" value="">
-    </form></div>
-		<div id="pre_request"><br>
-        <button type="submit" class="btn btn-danger" name="ok" onclick="commandstart()">执行</button>
-		</div>
-		
-
-<div class="bs-callout bs-callout-info">
-    
-</div>
-</div>
+<table class="table">
+    <thead>
+        <tr>
+          <th>玩家名称</th>
+      </thead>
+{% for i in recording %}
+<thead>
+    <tr class="active">
+        <td>{{i}}</td>
+{% endfor %}	 
+</thead>	
+</table>
 <div class="usercm" style="left: 199px; top: 5px; display: none;">
     <ul>
       <li><a href="/"><i class="iconfont icon-home"></i><span>首页</span></a></li>
@@ -225,6 +206,8 @@ layui.use('element', function(){
         }
     }());
 </script>  
+
+
 
 </body>
 </html>
